HSEARCH-4763 Replace usage of URL constructors with URI where possible